Added size range feature

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <main class="container-fluid content">
         <article>
             <small id="size-display">16/16</small>
-            <input type="range" value="16" min="1" max="64" name="grid-size" id="grid-size">
+            <input type="range" value="16" min="1" max="64" name="size-range" id="size-range">
         </article>
-        <article class="grid-container grid-16">
+        <article class="grid-container">
         
         </article>
     </main>
