Added Clear button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         </ul>
     </nav>
     <main class="container-fluid content">
-        <article>
+        <article class="options">
+            <button id="btn-rainbow" class="secondary outline">Rainbow mode</button>
+            <button id="btn-erase" class="secondary outline">Erase</button>
+            <button id="btn-clear" class="secondary outline">Clear</button>
             <small id="size-display">16/16</small>
             <input type="range" value="16" min="1" max="64" name="size-range" id="size-range">
         </article>
