Added color button w/ color picker

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         </ul>
     </nav>
     <main class="container-fluid content">
+        <div class="color-container">
+            <input type="color" name="color-input" id="color-input">
+        </div>
         <article class="options">
+            <button id="btn-color" class="secondary">Color Mode</button>
             <button id="btn-rainbow" class="secondary outline">Rainbow mode</button>
             <button id="btn-erase" class="secondary outline">Erase</button>
             <button id="btn-clear" class="secondary outline">Clear</button>
