Added grid view toggle feature

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
         <article class="grid-container">
         
         </article>
+        <a class="secondary" id="toggle-grid" data-tooltip="Show grid" data-placement="right"><i id="grid-icon" class="fa-solid fa-eye"></i></a>
     </main>
 </body>
 </html>
