Fixed grid button for different screen sizes

--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
             <small id="size-display">16/16</small>
             <input type="range" value="16" min="1" max="64" name="size-range" id="size-range">
         </article>
-        <article class="grid-container">
+        <div class="grid-toggle-container">
+            <article class="grid-container">
+        
+            </article>
+            <a class="secondary" id="toggle-grid" data-tooltip="Show grid" data-placement="right"><i id="grid-icon" class="fa-solid fa-eye"></i></a>
+        </div>
+        <!-- <article class="grid-container">
         
         </article>
-        <a class="secondary" id="toggle-grid" data-tooltip="Show grid" data-placement="right"><i id="grid-icon" class="fa-solid fa-eye"></i></a>
+        <a class="secondary" id="toggle-grid" data-tooltip="Show grid" data-placement="right"><i id="grid-icon" class="fa-solid fa-eye"></i></a> -->
     </main>
 </body>
 </html>
